13-Mar-2015 Laurent Duflot 
	* tag ZeroLeptonRun2-00-00-21

13-Mar-2015 Nikola Makovec
	* ZeroLeptonSR: fix razor variables calculation

25-Feb-2015 Laurent Duflot
	* makeSignalPicklePoint: add the GG_onestepCC mchi=25 points

24-Feb-2015 Laurent Duflot
	* BuildSUSYObjects : change pT cut for electrons to 10 GeV
	* tag ZeroLeptonRun2-00-00-20

18-Feb-2015 Laurent Duflot
	* getMCInfo.py: write also latex table for signal samples

13-Feb-2015 Laurent Duflot
	* makeSignalPicklePoint : add a couple of missing points
	* ZeroLeptonCRWT: fix bug in el/mu pT selection (C++ coding error that
	caused skipped particles or crashes). No effect seen on a standard
	ttbarsample with 5k events.

12-Feb-2015 Laurent Duflot
	* INSTALL: add instructions to fix SUSYTools Makefile.RootCore
	* BuildSUSYObjects : fix bug in selecting baseline muons.
	* tag ZeroLeptonRun2-00-00-19

11-Feb-2015 Laurent Duflot
	* README : improved doc
	* ZeroLeptonNTVars, PhysObjProxyUtils: add jet FracSamplingMax and
	FracSamplingMaxIndex to mini-tuples
	* tag ZeroLeptonRun2-00-00-18

10-Feb-2015 Laurent Duflot
	* PhyjObjproxyUtils: fix bug in calculating the "no BCH_CORR_CELL" MET
	* BuildSUSYObjects: doHarmonization=false for overlap removal as it causes
	non signal muons to fail OR and so muon veto.
	* PileUpRWProcessor: now use the PileUpReweightingTool rather than
	TPileupReweighting (no effect for identical prw files) and update prw file.
	* config files: use default prw file in pileup reweighting

09-Feb-2015 Laurent Duflot
	* makeDatasetList.py: allow to select one of the sample lists.
	* data: add dataset infos for mc14_13TeV
	* tag ZeroLeptonRun2-00-00-17

06-Feb-2015 Laurent Duflot
	* Sphericity.cxx: remove spurious printout
	* ZeroLeptonNTVars, PhysObjProxyUtils, ZeroLeptonSR: add met without
	BCH_CORR_CELL jet correction, met LocHadTopo with/without
	BCH_CORR_CELL jet correction
	* tag ZeroLeptonRun2-00-00-16

05-Feb-2015 Laurent Duflot